css/style.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 62.5%; /* 1rem = 10px/16px= 62.5% */
}

body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  line-height: 1.6rem;
  color: rgb(252, 252, 252);
  /* background-image: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%); */
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 100vh;
  color: #777;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #333;
  height: 5rem;
}

.header__nav {
  display: flex;
  justify-content: space-around;
  flex: 0 0 50%;
}

/* MAIN */

.section-projects {
  display: flex;
  align-items: center;
  justify-content: center;
}

.card-list {
  padding: 13rem 0 13rem 0;
  max-width: 124rem;

  display: flex;
  flex-wrap: wrap;
  gap: 5rem;
}
.card {
  width: 350px;
  perspective: 150rem;
  height: 54rem;
  /* background-color: #999; */
}

.card__side {
  height: 52rem;
  transition: all 0.8s ease;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  backface-visibility: hidden;
  border-radius: 3px;
  overflow: hidden;
  box-shadow: 0 1.5rem 4rem rgb(0 0 0 / 15%);
}

.card__side--front {
  background-color: #fff;
  display: flex;
  flex-direction: column;
}

.card__heading {
  font-size: 2.8rem;
  font-weight: 300;
  text-transform: uppercase;
  text-align: right;
  color: #fff;
  position: absolute;
  top: 12rem;
  right: 2rem;
  width: 75%;
}
.card__heading-span {
  padding: 1rem 1.5rem;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
}
.card__heading-span--1 {
  background-image: linear-gradient(
    to right bottom,
    rgb(255, 51, 102, 0.85),
    rgb(186, 38, 93, 0.85)
  );
}
.card__heading-span--2 {
  background-image: linear-gradient(to right bottom, #55c57a, #28b485);
}
.card__heading-span--3 {
  background-image: linear-gradient(to right bottom, #e67e22, #cf711f);
}

.card__picture {
  background-size: cover;
  height: 23rem;
  background-blend-mode: screen;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.card__picture--1 {
  background-image: linear-gradient(
      to right bottom,
      rgb(255, 51, 102),
      rgb(186, 38, 93)
    ),
    url(/img/hotel-1.jpg);
  position: relative;
}

.card__picture--2 {
  background-image: linear-gradient(to right bottom, #55c57a, #28b485),
    url(/img/hotel-2.jpg);
  position: relative;
}
.card__picture--3 {
  background-image: linear-gradient(to right bottom, #e67e22, #cf711f),
    url(/img/hotel-3.jpg);
  position: relative;
}

.card__details {
  padding: 3rem;
}

.card__details ul {
  list-style: none;
  width: 80%;
  margin: 0 auto;
}

.card__details ul li:not(:last-child) {
  border-bottom: 1px solid #eee;
}

.card__details ul li {
  text-align: center;
  font-size: 1.5rem;
  padding: 1rem;
  color: #777;
}

/* FOOTER */
.footer {
  height: 10rem;
  background-color: #333;
  color: #fff;
  padding: 3rem 2rem;
}

.signup {
}
.singup__label-title {
}

.input__signup-email {
  font-size: 1rem;
  font-family: inherit;
  height: 2.5rem;
  text-decoration: none;
  border-bottom: 1px solid transparent;
  padding: 0.5rem;
  color: #555;
  font-family: inherit;
  background-color: #fff;
  border-bottom: 3px solid transparent;
}

/* COMPONENTS */

.btn {
  border: none;
  cursor: pointer;
  padding: 0.5rem 1.5rem;
  border-radius: 2px;
  background-color: transparent;
}
.btn--white {
  background-color: #fff;
  color: #444;
  font-weight: 400;
}

.btn--pink {
  border-radius: 100px;
  background-image: linear-gradient(
    to right bottom,
    rgb(255, 51, 102, 0.85),
    rgb(186, 38, 93, 0.85)
  );
  color: #fff;
  align-self: center;
}
.btn--blue {
  border-radius: 100px;
  background-image: linear-gradient(to right bottom, #e67e22, #cf711f);
  color: #fff;
  align-self: center;
}
.btn--green {
  border-radius: 100px;
  background-image: linear-gradient(to right bottom, #55c57a, #28b485);
  color: #fff;
  align-self: center;
}

.card__heading {
  font-size: 2.8rem;
  font-weight: 300;
  text-transform: uppercase;
  text-align: right;
  color: #fff;
  position: absolute;
  top: 12rem;
  right: 2rem;
  width: 75%;
}

